implementing_all_social_funcs
